Another try to fix alignment of question

--- a/src/app/games/nhie/nhie.component.scss
+++ b/src/app/games/nhie/nhie.component.scss
@@ -16,14 +16,14 @@
 
 .question-player{
   position: absolute;
-  bottom: 40vh;
+  top: 50vh;
   width: 40vh;
   text-align: center;
 }
 
 .question-game-leader{
   position: absolute;
-  bottom: 43vh;
+  top: 45vh;
   width: 40vh;
   text-align: center;
 }
